# deformable_manipulation_interface

./: .gitignore  CMakeLists.txt  extract_timing_info_from_quinlan_logs.sh  isrr_trials.sh  kalman_synthetic_trials_SMALL_result.txt  kalman_synthetic_trials_results_compiled.ods  mengyao_run_trial.py  mengyao_wafr_cos_tral.py  package.xml
Mengyao/: mengyao_cloth_single_pole_tral.py  mengyao_rope_cylinder_tral.py  mengyao_rope_zig_tral.py  mengyao_run_trial.py  mengyao_simple_trial.py  mengyao_wafr_cos_tral.py
Mengyao/IROS/: IROS_ControlError.py  IROS_ModelAccuracy.sh  IROS_Stretching.py  mengyao_run_trial.py
Mengyao/IROS/Matlab_Script/: Instruction.txt  control_error_IROS_rope_cylinder.m  control_error_IROS_rope_zig.m  model_accuracy_plots.m  model_accuracy_plots_live.m  single_stretching_factor_IROS_cloth_single_pole.m  single_stretching_factor_IROS_rope_cylinder.m
deformable_manipulation_experiment_params/: CMakeLists.txt
deformable_manipulation_experiment_params/include/deformable_manipulation_experiment_params/: ros_params.hpp  task_enums.h  utility.hpp  xyzgrid.h
deformable_manipulation_experiment_params/launch/: cloth_cylinder_params.launch  cloth_double_slit_params.launch  cloth_mflag_live_robot_params.launch  cloth_placemat_IROS_model_accuracy_test_params.launch  cloth_placemat_IROS_tearing_test_params.launch  cloth_placemat_live_robot.launch  cloth_placemat_live_robot_params.launch  cloth_single_pole_params.launch  cloth_table_IROS_model_accuracy_test_params.launch  cloth_table_params.launch  cloth_wafr_params.launch  cloth_wall_params.launch  colab_folding_params.launch  generic_experiment.launch  generic_experiment_dale.launch  generic_experiment_mengyao.launch  generic_experiment_model_tests.launch  live_cloth_mflag_params.launch  live_cloth_placemat_params.launch  live_rope_cylinder_params.launch  live_rope_simple_params.launch  lone_cloth.launch  rope_cylinder_params.launch  rope_cylinder_two_grippers_params.launch  rope_hooks_data_generation_params.launch  rope_hooks_params.launch  rope_maze_from_top_params.launch  rope_maze_params.launch  rope_simple_live_robot_params.launch  rope_table_IROS_model_accuracy_test_params.launch  rope_table_Up_toward_params.launch  rope_table_along_params.launch  rope_table_linear_minus_x_params.launch  rope_table_linear_minus_y_params.launch  rope_table_linear_plus_x_params.launch  rope_table_linear_plus_y_params.launch  rope_table_linear_plus_z_params.launch  rope_table_linear_pull_down_into_table_params.launch  rope_table_opposite_params.launch  rope_table_toward_params.launch  (+3 more)
deformable_manipulation_experiment_params/launch/experiments/: cloth_double_slit_params.launch  cloth_hooks_complex_params.launch  cloth_hooks_simple_params.launch  engine_assembly_params.launch  live_cloth_placemat_params.launch  live_rope_engine_assembly_params.launch  live_rope_simple_params.launch  rope_cylinder_params.launch  rope_generic_params.launch  rope_hooks_data_generation_params.launch  rope_hooks_multi_params.launch  rope_hooks_params.launch  rope_hooks_simple_long_rope_params.launch  rope_hooks_simple_params.launch  rope_hooks_simple_short_rope_params.launch  rope_hooks_simple_super_long_rope_params.launch  rope_maze_from_top_params.launch  rope_maze_params.launch
deformable_manipulation_experiment_params/launch/launch_files_that_need_updating/: cloth_placemat_live_robot_params.launch
deformable_manipulation_experiment_params/launch/shared/: classifier_params.launch  classifier_params__label_based_on_correct.launch  classifier_params__with_filtering_on_transition_start.launch  rrt_params.launch  transition_estimation_params.launch
deformable_manipulation_experiment_params/scripts/: classifier_multi_instance_trials.py  classifier_single_instance_trials.py  classifier_trials.py  classifier_trials_smmap_planner.py  classifier_trials_transition_learning.py  md5check.sh  parse_success.sh  run_trial.py  smmap_rerun_forever.sh
deformable_manipulation_experiment_params/src/: placeholder.cpp  ros_params.cpp  serialization.cpp  xyzgrid.cpp
deformable_manipulation_msgs/: CMakeLists.txt  package.xml
deformable_manipulation_msgs/action/: GenerateTransitionData.action  TestGrippersPoses.action
deformable_manipulation_msgs/include/deformable_manipulation_msgs/: messages.h
deformable_manipulation_msgs/msg/: ObjectConfiguration.msg  SimulatorFeedback.msg  WorldState.msg
deformable_manipulation_msgs/src/: messages.cpp
deformable_manipulation_msgs/srv/: ExecuteGripperMovement.srv  ExecuteRobotMotion.srv  GetGripperStretchingVectorInfo.srv  GetPointSet.srv  TestRobotMotionMicrosteps.srv
include/smmap/: deformable_model.h  diminishing_rigidity_model.h  gripper_helpers.h  model_set.h  planner.h  task.h  trajectory.h
launch/: smmap.launch
logs/: .gitignore  kalman_synthetic_trials_LARGE_result_100_trials_1000_pulls.txt  kalman_synthetic_trials_MEDIUM_result_100_trials_1000_pulls.txt
matlab_tools/: Makefile  error_compare.m  error_compare_10_step_multi_model.m  error_compare_10_step_single_model.m  error_compare_1_step_multi_model.m  error_compare_1_step_shooting_vs_individual_models.m  error_compare_1_step_single_model_weighted.m  error_compare_generic_test_vs_individual_models.m  error_compare_kalman_bandits.m  error_compare_multi_compare.m  error_compare_multi_model.m  error_compare_shooting.m  error_compare_weighted_traj.m  error_parse.m  error_video.m  utlity_video.m
matlab_tools/output_images/cloth_table/: .gitignore  1-step-multimodel-comparison.eps  1-step-shooting_vs_individual_models.eps  1-step-single-model-weighted-comparison.eps  1_step_vs_10_step.eps  (+8 more)
nodes/: test_node.cpp
scripts/z_old/: run_all_tests.sh
smmap_experiment_params/: CMakeLists.txt
smmap_msgs/: CMakeLists.txt  package.xml
smmap_msgs/action/: CmdGrippersTrajectory.action
smmap_msgs/include/smmap_msgs/: messages.h
smmap_msgs/msg/: SimulatorFbkStamped.msg
smmap_msgs/srv/: CmdGrippersTrajectory.srv  ExecuteGripperMovement.srv  GetFreeSpaceGraph.srv
src/: deformable_model.cpp  diminishing_rigidity_model.cpp  model_set.cpp  planner.cpp
(+26 files in other folders)
