<?xml version="1.0"?>
<package>
  <name>smmap</name>
  <version>0.0.1</version>
  <description>The Simultaneous Manipulation, Model Building, and Planning package</description>

  <maintainer email="dale.mcconachie@ssengineering.ca">Dale McConachie</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>arc_utilities</build_depend>
  <build_depend>geometery_msgs</build_depend>
  <build_depend>tf_conversions</build_depend>

  <run_depend>arc_utilities</run_depend>
  <run_depend>geometery_msgs</run_depend>
  <run_depend>tf_conversions</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
